--- a/DirectLib/DirectLib.csproj
+++ b/DirectLib/DirectLib.csproj
@@ -73,16 +73,17 @@
     <Compile Include="Engine\Colliders\GroundCollider.cs" />
     <Compile Include="Engine\Objects\Bonus.cs" />
     <Compile Include="Engine\Objects\Cube.cs" />
+    <Compile Include="Engine\Objects\DestroyBonus.cs" />
     <Compile Include="Engine\Objects\GameObject.cs" />
     <Compile Include="Engine\Colliders\SphereCollider.cs" />
     <Compile Include="Engine\Objects\Ground.cs" />
     <Compile Include="Engine\Objects\Sphere.cs" />
+    <Compile Include="Graphics\Graphics.cs" />
     <Compile Include="Graphics\Models\Camera.cs" />
     <Compile Include="Graphics\Data\Light.cs" />
     <Compile Include="Graphics\Data\RenderTexture.cs" />
     <Compile Include="Graphics\Data\Texture.cs" />
     <Compile Include="Graphics\DX11.cs" />
-    <Compile Include="Graphics\Graphics.cs" />
     <Compile Include="Graphics\Input\Input.cs" />
     <Compile Include="Graphics\Input\Transform.cs" />
     <Compile Include="Graphics\Models\Model.cs" />
